FIX: change cursor style for scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,15 +20,18 @@ code {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   background-color: #ffffff;
+  cursor: auto;
 }
 
 ::-webkit-scrollbar {
   width: 10px;
   background-color: #ffffff;
+  cursor: auto;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: rgba(0, 0, 0, 0.3);
+  cursor: auto;
 }
